# user-service-drf-backend

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
app/user_service_drf_backend/: asgi.py  settings.py  urls.py
user_service_drf_backend/: settings.py  wsgi.py
