[tool.poetry]
name = "user-service-drf-backend"
version = "0.1.0"
description = ""
authors = ["PeterChen <sanpeter992000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
djangorestframework = "^3.15.1"
psycopg2 = "^2.9.9"
djangorestframework-simplejwt = "^5.3.1"
djoser = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
